updating upload.html file

--- a/upload.html
+++ b/upload.html
@@ -13,7 +13,7 @@
         <h1>Upload an Image</h1>
       </div>
       <div class="col-12 col-md-2 text-right">
-        <a href="index.html" class="btn btn-secondary">Back to Gallery</a>
+        <a href="my-web-app-alb-296148162.us-east-1.elb.amazonaws.com" class="btn btn-secondary">Back to Gallery</a>
       </div>
     </div>
     <div class="row">
